# mpc

./: CMakeLists.txt  README.md  index.html  index.md  install_ipopt.sh
src/: base_type.h  cost.cpp  cost.h  main.cpp  mpc.cpp  mpc.h  state.h  timedelay.m
src/legacy/: MPC.h  MPC_ic.h  MPC_old.cpp  MPC_reduced.h  MPC_withstates.cpp  MPC_withstates.h  control.h  cost.h  cost_ic.h  cost_reduced.h  main.cpp  matplotlibcpp.h
